# URTTbar

./: .gitignore  BTagEffPlotter.py  README.md  Rakefile  add_bbb.sh  addhelp2.sh  addjobs.py  addjobs2.py  addjobs_plain.py  btag_efficiency.cc  environment.sh  jobsub  resubmit.py  resubmitallmissing.py  runjesunc20.sh  runjesunc6.sh  rununc.sh  samples.json  styles.py  ttbar.cc  ttbarxsec.cc  ttbarxsec.cfg  updateconfig.py
AnalysisSoftware/AnalysisLib/: AnalysisToolUseThis.in  CMakeLists.txt  createIOCode.py
AnalysisSoftware/AnalysisLib/CMSSWsrc/MyRootMaker/MyRootMaker/: BuildFile.xml
AnalysisSoftware/AnalysisLib/CMSSWsrc/MyRootMaker/MyRootMaker/interface/: BASEIO.h  BASEIOLUMI.h  BASEIORUN.h  RootMaker.h  iohelper.h
AnalysisSoftware/AnalysisLib/CMSSWsrc/MyRootMaker/MyRootMaker/python/: RootMakerTemplateDA_cfg.py  RootMakerTemplateMC_VBS_cfg.py  RootMakerTemplateMC_cfg.py  RootMakerTemplateMCnopat.py  RootTreeMC.py
AnalysisSoftware/AnalysisLib/CMSSWsrc/MyRootMaker/MyRootMaker/src/: BASEIO.cc  BASEIOLUMI.cc  BASEIORUN.cc  RootMaker.cc  iohelper.cc
AnalysisSoftware/AnalysisLib/apps/: CMakeLists.txt  LUMIlocaldir.cc  LUMIxrootd.cc
AnalysisSoftware/AnalysisLib/example/: CMakeLists.txt  ExampleDY.cc  ExampleDY.h  main.cc
AnalysisSoftware/AnalysisLib/lib/: Analyse.cc  Analyse.h  CMakeLists.txt  Electron.cc  Electron.h  GenBasicParticle.cc  GenBasicParticle.h  GenJet.cc  GenJet.h  GenSelectedParticle.cc  GenSelectedParticle.h  GenSimpleParticle.cc  GenSimpleParticle.h  Jet.cc  Jet.h  Luminosity.cc  Luminosity.h  Muon.cc  Muon.h  Photon.cc  Photon.h  Run.cc  Run.h  SuperCluster.cc  SuperCluster.h  Track.cc  Track.h  TriggerObject.cc  TriggerObject.h  TriggerSelection.cc  TriggerSelection.h  content.def  contentLUMI.def  contentRUN.def  iohelper.cc  iohelper.h
AnalysisSoftware/AnalysisLib/libextra/: CMakeLists.txt  ConfigParser.h  GluonJetFinder.cc  GluonJetFinder.h  ME.cc  ME.h  OElectron.cc  OElectron.h  OJet.cc  OJet.h  OMuon.cc  OMuon.h  OPhoton.cc  OPhoton.h  RAMBO.cc  RAMBO.h  helper.cc  helper.h
AnalysisSoftware/Tools/: CMakeLists.txt
AnalysisSoftware/Tools/DYTPEl/: CMakeLists.txt  DYTPEl.cc  DYTPEl.h  main.cc
AnalysisSoftware/Tools/DYTPMu/: CMakeLists.txt  DYTPMu.cc  DYTPMu.h  main.cc
AnalysisSoftware/Tools/DYTPMuFitter/: CMakeLists.txt  DYTPMu.cc  DYTPMu.h  main.cc
AnalysisSoftware/Tools/TTSemi/: CMakeLists.txt  NeutrinoSolver.cc  TTBarBins.cc  TTBarBins.h  TTBarPlots.cc  TTBarPlots.h  TTBarSolver.cc  TTBarSolver.h  TTSemi.cc  TTSemi.h  main.cc
AnalysisSoftware/Tools/TopFitter/: CMakeLists.txt  JetScaleCalculator.cc  JetScaleFitter.cc  TopFitter.cc  TopFitter2fit.cc  TopFitterBTAG.cc  TopFitterSepBKG.cc
AnalysisSoftware/Tools/TopUnfolder/: CMakeLists.txt  TopUnfolding.cc
AnalysisSoftware/Tools/cmake/Modules/: FindRooUnfold.cmake
AnalysisSoftware/Tools/configuration/: SCALE.cfg  TopFitter.cfg  Unfolding.cfg
card_cfg/: cgs.conf  unc.conf  unc.vals
developing/: TTBarPlotsYukawa.cc  ttbarxsec_editing.cc
inputs/MYJOBID/: test.meta.json  test.txt
interface/: BHadronDecayWeights.h  BTagWeight.h  BtagEff.h  ConfigParser.h  Dict.h  GenObject.h  Hypotheses.h  IDElectron.h  IDJet.h  IDMet.h  IDMuon.h  JetScale.h  JetScaler.h  LepEffCorrection.h  MCMatchable.h  NeutrinoSolver.h  PDFuncertainty.h  Permutation.h  README.txt  TTBarGenPlots.h  TTBarPlots.h  TTBarPlotsBase.h  TTBarResponse.h  TTBarResponse2D.h  TTBarResponse2Dvar.h  TTBarSolver.h  URElectronsSelector.h  URJetsSelector.h  URMuonsAndJetsSelector.h  URMuonsSelector.h  URStreamer.h  genSelection.h  helper.h  jetscale.h  ttbarxsec.h
src/: BTagWeight.cc  BtagEff.cc  ConfigParser.cc  IDElectron.cc  IDMuon.cc  JetScale.cc  JetScaler.cc  NeutrinoSolver.cc  PDFuncertainty.cc  Permutation.cc  TTBarGenPlots.cc  TTBarPlots.cc  TTBarPlotsBase.cc  TTBarResponse.cc  TTBarResponse2D.cc  TTBarResponse2Dvar.cc  TTBarSolver.cc  genSelection.cc  helper.cc
